--- a/private_dot_config/doom/config.org
+++ b/private_dot_config/doom/config.org
@@ -1,139 +1,24 @@
-:PROPERTIES:
-:ID:       6502f8cb-9a89-43bb-81f8-9fd15bff8385
-:END:
-#+TITLE: My Emacs Configurations
-#+PROPERTY: header-args:emacs-lisp :tangle yes :cache yes
+#+TITLE: My Doom Configuration
 #+AUTHOR: Romario
-
-#+begin_src emacs-lisp
-;;; $DOOMDIR/config.el -*- lexical-binding: t; -*-
-#+end_src
-* Variables Directory
+#+PROPERTY: header-args:emacs-lisp :tangle ./config.el
+* Help
+- =`load!'= for loading external *.el files relative to this one
+- =`use-package!'= for configuring packages
+- =`after!'= for running code after a package has loaded
+- =`add-load-path!'= for adding directories to the `load-path', relative to
+this file. Emacs searches the =`load-path'= when you load packages with `require' or `use-package'.
+- =`map!'= for binding new keys
+* General
+** Basic
 :PROPERTIES:
-:ID:       5fbac44f-22d3-4115-8e96-0c13a5ea36dd
+:ID:       b3a5df34-317c-4640-bd39-82748413b3f5
 :END:
 #+begin_src emacs-lisp
-;; Variables Directory
-(setq mario/org-agenda-dir (file-truename "~/documents")
-      mario/org-dir (file-truename "~/documents")
-      mario/org-journal-dir (file-truename "~/documents")
-      mario/org-roam-dir (file-truename "~/documents"))
-#+end_src
-* Functions
-** Generating Config
-:PROPERTIES:
-:ID:       78332190-a8e4-43bc-9e82-edff929ff0d3
-:END:
-#+begin_src emacs-lisp
-;; GENERATING CONIFG
-(defun mario/generate-config()
- "Generate README.org"
-        (interactive)
-    (evil-split-buffer (generate-new-buffer "Untitled"))
-    (find-file "~/.config/doom/config.org")
-    (save-buffer)
-    (evil-goto-first-line)
-    (re-search-forward "+PROPERTY:")
-    (org-ctrl-c-ctrl-c)
-    (org-babel-tangle)
-    (find-file "~/.config/doom/config.el"))
-
-#+end_src
-** XDG OPEN
-:PROPERTIES:
-:ID:       9eebead9-1925-4f64-903e-e255e2466617
-:END:
-#+begin_src emacs-lisp
-;; XDG OPEN
-(defun mario/open-in-external-app (&optional @fname)
-  "Open the current file or dired marked files in external app.
-When called in emacs lisp, if @fname is given, open that.
-URL `http://ergoemacs.org/emacs/emacs_dired_open_file_in_ext_apps.html'
-Version 2019-11-04 2021-02-16"
-  (interactive)
-  (let* (
-         ($file-list
-          (if @fname
-              (progn (list @fname))
-            (if (string-equal major-mode "dired-mode")
-                (dired-get-marked-files)
-              (list (buffer-file-name)))))
-         ($do-it-p (if (<= (length $file-list) 5)
-                       t
-                     (y-or-n-p "Open more than 5 files? "))))
-    (when $do-it-p
-      (cond
-       ((string-equal system-type "windows-nt")
-        (mapc
-         (lambda ($fpath)
-           (shell-command (concat "PowerShell -Command \"Invoke-Item -LiteralPath\" " "'" (shell-quote-argument (expand-file-name $fpath )) "'")))
-         $file-list))
-       ((string-equal system-type "darwin")
-        (mapc
-         (lambda ($fpath)
-           (shell-command
-            (concat "open " (shell-quote-argument $fpath))))  $file-list))
-       ((string-equal system-type "gnu/linux")
-        (mapc
-         (lambda ($fpath) (let ((process-connection-type nil))
-                            (start-process "" nil "xdg-open" $fpath))) $file-list))))))
-#+end_src
-#+begin_src emacs-lisp
-(defun mario/open-with (arg)
-  "Open visited file in default external program.
-When in dired mode, open file under the cursor.
-With a prefix ARG always prompt for command to use."
-  (interactive "P")
-  (let* ((current-file-name
-          (if (eq major-mode 'dired-mode)
-              (dired-get-file-for-visit)
-            buffer-file-name))
-         (open (pcase system-type
-                 (`darwin "open")
-                 ((or `gnu `gnu/linux `gnu/kfreebsd) "xdg-open")))
-         (program (if (or arg (not open))
-                      (read-shell-command "Open current file with: ")
-                    open)))
-    (call-process program nil 0 nil current-file-name)))
-(map! "C-c o o" 'jethro/open-with)
-
-#+end_src
-** Browse-dotfiles
-:PROPERTIES:
-:ID:       7fbfb560-b11e-4f4b-a8c1-089d7a3da638
-:END:
-#+begin_src emacs-lisp
-(defun mario/browse-dotfiles ()
-  "Browse the files in ~/.dotfiles."
-  (interactive)
-  (doom-project-browse (expand-file-name "~/.config/")))
-#+end_src
-** Open Doom config
-(defun mario/open-doom-config ()
-  "Open doom config"
-  (interactive)
-  (find-file "~/.config/doom/config.org"))
-* Basic Setting
-:PROPERTIES:
-:ID:       292da58c-8773-4821-a18e-6ffd60bf5571
-:END:
-#+begin_src emacs-lisp
-;; User Setting
-(setq doom-theme 'mario-gruvbox
-      doom-gruvbox-dark-variant "hard"
-      doom-scratch-initial-major-mode 'org-mode
-      doom-font (font-spec :family "monospace" :size 15)
-      doom-variable-pitch-font (font-spec :family "monospace" :size 24)
-      doom-serif-font (font-spec :family "monospace" :size 24)
-      fancy-splash-image (concat doom-private-dir "themes/splash.png"))
 (setq user-full-name "Romario"
-      user-mail-address "romario@com")
-(setq-default major-mode 'org-mode)
-
-(setq display-line-numbers-type nil            ; turn off line number , you can toggle it with <leader>tl
+      user-mail-address "romario@com"
+      display-line-numbers-type nil            ; turn off line number , you can toggle it with <leader>tl
       undo-limit 80000000                         ; Raise undo-limit to 80Mb
       auto-save-default t                         ; Nobody likes to loose work, I certainly don't
-      truncate-string-ellipsis " …"                ; Unicode ellispis are nicer than "...", and also save /precious/ space
       evil-split-window-below t                   ; Switch to            after splitting
       evil-vsplit-window-right t)
 ;; Show battery mode if on laptop
@@ -141,182 +26,377 @@ With a prefix ARG always prompt for command to use."
                (battery))
   (display-battery-mode 1))
 (remove-hook '+doom-dashboard-functions #'doom-dashboard-widget-shortmenu) ; hide dashboard shortmen
-;;(remove-hook 'doom-first-buffer-hook #'global-hl-line-mode) ; hide highlight line
 #+end_src
-* KEYBINDING
-** ?
+*** Org Tangle - Auto Generate Config
 :PROPERTIES:
-:ID:       73cea7b9-62be-4dbe-81d3-7c7229303c91
+:ID:       36533d71-887e-4e00-8286-b61dac569426
 :END:
 #+begin_src emacs-lisp
-(map! :nv
-      "Z W" #'save-buffer)
-;; unmap popup scratch buffer
-(map! :leader
-      :nv "x" nil)
+(defun mario/tangle-config()
+  (when (string-equal (buffer-file-name)
+            (expand-file-name "~/.config/doom/config.org"))
+            ;; (expand-file-name "~/.config/doom/config.org"))
+   (let ((org-confirm-babel-evaluate nil))
+     (org-babel-tangle))))
+(add-hook 'org-mode-hook (lambda() (add-hook 'after-save-hook #'mario/tangle-config)))
+#+end_src
+** Themes
+:PROPERTIES:
+:ID:       34992806-4bdd-4346-8141-c44af28c47dc
+:END:
+#+begin_src emacs-lisp
+(setq doom-theme 'mario-gruvbox
+      doom-gruvbox-dark-variant "hard")
+#+end_src
+** Font
+:PROPERTIES:
+:ID:       8b1179dc-2b79-4dbe-ad3d-770b0eb883d9
+:END:
+#+begin_src emacs-lisp
+(setq doom-font (font-spec :family "JetBrainsMono Nerd Font Mono" :size 15)
+      doom-variable-pitch-font (font-spec :family "ETbb" :size 24)
+      doom-big-font (font-spec :family "ETbb" :size 24) ;; used for presentations or streaming
+      ;;doom-serif-font (font-spec :family "JetBrainsMono Nerd Font Mono" :size 24))
+      )
+#+end_src
+** Custom Function
+*** Browse Dotfiles
+:PROPERTIES:
+:ID:       fe6b9af6-2fc6-4cda-88b1-f0ec62437c2d
+:END:
+#+begin_src emacs-lisp
+(defun mario/browse-dotfiles ()
+  "Browse the files in ~/.dotfiles."
+  (interactive)
+  (doom-project-browse (expand-file-name "~/.config/")))
+#+end_src
+***
+* Keybinding
+:PROPERTIES:
+:ID:       e91ee5a8-a693-44ea-8d97-6797d21a1720
+:END:
+#+begin_src emacs-lisp
 (map! :leader
        "h" #'evil-window-left
        "j" #'evil-window-down
        "l" #'evil-window-right
        "v" #'evil-window-vsplit
        "s" #'evil-window-split
-       "k" #'evil-window-up)
-#+end_src
-** Rebind
-:PROPERTIES:
-:ID:       16c5b4c2-3f1f-467c-9d41-9e58ee0e264f
-:END:
-#+begin_src emacs-lisp
-(map! :leader
-      :nv "/" #'evilnc-comment-operator
-      :desc "help" "H" help-map
-        (:prefix-map ("S" . "search"))
-         (:prefix ("x" . "org-capture")
-          :desc "Popup scratch" "x" #'doom/open-scratch-buffer
-          :desc "Org Capture Finalize/Save" "w" #'org-capture-finalize
-          :desc "Org Capture Kill" "s" #'org-capture-finalize
-          :desc "Org Capture Kill" "c" #'org-capture-kill
-          :desc "Org Capture Kill" "d" #'org-capture-kill
-          :desc "Org Capture Refile" "r" #'org-capture-refile))
-#+end_src
-** My function binding
-:PROPERTIES:
-:ID:       08e91558-478f-4074-bdc9-4dd125ee72a5
-:END:
-#+begin_src emacs-lisp
-(map! :leader
-       "f z" #'org-ctrl-c-ctrl-c
-       "f ." #'mario/browse-dotfiles
-       "f t" #'mario/find-in-dotfiles
-       "f g" #'mario/generate-config
-       "f G" #'mario/open-doom-config
+       "k" #'evil-window-up
+       :nv "/" #'evilnc-comment-operator
+       :desc "help" "H" help-map
+       "f z" #'mario/browse-dotfiles
       (:prefix ("y" . "yank/copy")
         :desc "org-store-link" "o" #'org-store-link
-        :desc "copy-id-from-agenda" "a" #'mario/copy-idlink-to-clipboard )
-        (:prefix-map ("b" . "buffer")
-         :desc "Switch buffer"           "/" #'switch-to-buffer))
-(map! :leader
-      "o x" #'mario/open-in-external-app
-      "n z" #'mario/switch-to-agenda)
-
+        :desc "copy-id-from-agenda" "a" #'mario/copy-idlink-to-clipboard)
+       "n z" #'mario/switch-to-agenda)
 #+end_src
-* /ORG/
+* Org
+** Org
+*** Configuration
 :PROPERTIES:
-:ID:       13d55dd2-5859-4268-b512-45bcd5e03430
+:ID:       09b334ec-e9bb-4e79-96e3-8ad61101705e
 :END:
 #+begin_src emacs-lisp
-;; ORG
+(setq mario/org-agenda-dir (file-truename "~/Documents/Docdump/gtd/")
+      mario/org-dir (file-truename "~/Documents/Docdump")
+      mario/org-journal-dir (file-truename "~/Documents/Docdump/journals")
+      mario/org-roam-dir (file-truename "~/Documents/Docdump"))
 (setq org-directory mario/org-dir
-      org-hide-emphasis-markers t ;; hide text like /italic/ slash
-      org-ellipsis "…" ;; folding symbol
-      ;; org-bullets-bullet-list '(" ") ;; no bullets, needs org-bullets package (not work for me)
-      org-archive-location (concat org-directory ".archive/%s::"))
-
-(setq org-tag-alist '(("@errand" . ?e)
+      org-ellipsis " "
+      org-archive-location (concat org-directory ".archive/%s::")
+      org-tag-alist '(("@errand" . ?e)
                       ("@office" . ?o)
+                      ("@computer" . ?h)
                       ("@home" . ?h)
                       (:newline)
                       ("CANCELLED" . ?c)))
+(setq org-log-done 'time
+     ;; org-log-into-drawer t
+      )
+(with-eval-after-load 'flycheck
+  (flycheck-add-mode 'proselint 'org-mode))
+;;(add-hook! org-mode
+;;  (lambda() (add-hook 'after-save-hook #'mario/tangle-config)))
+(require 'org-habit)
 (after! org
-  (require 'org-habit)
   (map! :leader
-        "c" #'org-capture)
-  (setq org-todo-keywords
+        "c" #'org-capture))
+(setq org-todo-keywords
       '((sequence "TODO(t)" "PROJ(p)" "NEXT(n)" "|" "DONE(d)")
+        (sequence "PROJ(p)" "|" "HOLD(h@/!)")
         (sequence "WAITING(w@/!)" "HOLD(h@/!)" "|" "CANCELLED(c@/!)")))
-  (setq org-todo-keyword-faces
+(setq org-todo-keywords-faces
         '(("TODO" :foreground "#008080" :weight normal :italic t)
           ("PROJ" :foreground "#fe8019" :weight normal :italic t)
           ("NEXT" :foreground "#d79221" :weight normal :italic t)
           ("WAITING" :foreground "#32302f" :weight normal :italic t)
-          ("DONE" :foreground "#98971a" :weight normal :strike-through t))))
+          ("DONE" :foreground "#98971a" :weight normal :strike-through t)))
+(setq org-structure-template-alist '(("a" . "export ascii")
+                                     ("c" . "center")
+                                     ("C" . "comment")
+                                     ("e" . "example")
+                                     ("E" . "export")
+                                     ("h" . "export html")
+                                     ("l" . "export latex")
+                                     ("q" . "quote")
+                                     ("s" . "src")
+                                     ("v" . "verse")
+                                     ("el" . "src emacs-lisp")
+                                     ("d" . "definition")
+                                     ("t" . "theorem")))
 #+end_src
-
-* ORG-JOURNAL
+*** Font
 :PROPERTIES:
-:ID:       9c05f007-5ca0-47fc-a25e-00a9803d1a8b
+:ID:       ad94d1fb-c9e7-4b37-a66c-75dec098aee7
 :END:
 #+begin_src emacs-lisp
-(after! org-journal
-  (setq org-journal-date-prefix "#+TITLE: "
-        org-journal-file-format "%Y-%m-%d.org"
-        org-journal-time-format "%I:%M%p"
-        org-journal-date-format "%A, %d %B %Y"
-        org-journal-dir mario/org-journal-dir
-        org-journal-enable-agenda-integration t))
+;; TODO: How to iterate to list ?
+(custom-set-faces!
+  '(outline-1 :font "ETbb" :height 1.4)
+  '(outline-2 :font "ETbb" :height 1.3)
+  '(outline-3 :font "ETbb" :height 1.2)
+  '(outline-4 :font "ETbb" :height 1.1)
+  '(outline-5 :font "ETbb" :height 1.05)
+  '(outline-5 :font "ETbb" :height 1.05)
+  '(org-document-info :font "ETbb" :slant italic :height 1.3)
+  '(org-document-title :font "ETbb" :height 1.6))
 #+end_src
-* ORG-AGENDA
-** Functions
+*** Another Set faces
 :PROPERTIES:
-:ID:       fcbd3dd0-c6b0-4c15-9c3e-328e0d33aebe
+:ID:       e091c617-2199-4e17-94f8-a12c2d23cd6d
 :END:
 #+begin_src emacs-lisp
-(defun jethro/org-inbox-capture ()
-  (interactive)
-  "Capture a task in agenda mode."
-  (org-capture nil "i"))
-#+end_src
-** Automatically copy id link to org-roam-dailies
-:PROPERTIES:
-:ID:       603adadc-68e0-4fb6-8454-c67af4cdd9d8
-:END:
-#+begin_src emacs-lisp
-
-(defun mario/org-roam-today-mk-agenda-link ()
-  (interactive)
-  (let* ((marker (or (org-get-at-bol 'org-marker)
-                     (org-agenda-error)))
-         (buffer (marker-buffer marker))
-         (pos (marker-position marker)))
-    (with-current-buffer buffer
-      (save-excursion
-        (goto-char pos)
-        (org-roam-dailies-capture-today)))))
-#+end_src
-** Get daily Agenda
-:PROPERTIES:
-:ID:       40d4cfbf-c794-4693-bb4e-88883678e1cd
-:END:
-#+begin_src emacs-lisp
-
-(defun mario/get-daily-agenda (&optional date)
-  "Return the agenda for the day as a string."
-  (interactive)
-  (let ((file (make-temp-file "daily-agenda" nil ".txt")))
-    (org-agenda nil "d" nil)
-    (when date (org-agenda-goto-date date))
-    (org-agenda-write file nil nil "*Org Agenda(d)*")
-    (kill-buffer)
-    (with-temp-buffer
-      (insert-file-contents file)
-      (goto-char (point-min))
-      (kill-line 2)
-      (while (re-search-forward "^  " nil t)
-        (replace-match "- " nil nil))
-      (buffer-string))))
+    (set-face-attribute 'org-document-info nil
+                          :foreground nil
+                          :slant 'italic
+                          :inherit 'variable-pitch)
+     ;; Ensure that anything that should be fixed-pitch in Org files appears that way
+     (set-face-attribute 'org-hide nil
+                          :inherit 'fixed-pitch)
+     (set-face-attribute 'org-block nil
+                          :foreground nil
+                          :inherit 'fixed-pitch)
+     (set-face-attribute 'org-block-begin-line nil
+                          :foreground nil
+                          :height 0.8
+                          :slant 'italic
+                          :inherit 'fixed-pitch)
+     (set-face-attribute 'org-ellipsis nil
+                          :foreground nil
+                          :height 1.2
+                          :inherit 'fixed-pitch)
+     (set-face-attribute 'org-meta-line nil
+                          :foreground nil
+                          :inherit 'fixed-pitch)
 
 #+end_src
-** X
+** Roam
+*** Roam
 :PROPERTIES:
-:ID:       53be5410-98ae-4038-b206-51613f4846e5
+:ID:       1ae2c2f7-4200-4ce8-ab9e-516ea2c25330
 :END:
 #+begin_src emacs-lisp
-;; org-agenda
+(use-package! org-roam
+  :init
+  (setq org-roam-v2-ack t)
+  (map! :leader
+        :prefix "n"
+        :desc "org-roam" "b" #'org-roam-buffer-toggle
+        :desc "org-roam-node-insert" "i" #'org-roam-node-insert
+        :desc "org-roam-node-find" "f" #'org-roam-node-find
+        :desc "Find file in notes" "F" #'+default/find-in-notes
+        :desc "Browse Notes" "C-f" #'+default/browse-notes
+        :desc "org-roam-ref-find" "k" #'org-roam-ref-find
+        :desc "org-roam-show-graph" "g" #'org-roam-show-graph
+        :desc "org-roam-capture" "x" #'org-roam-capture
+        :desc "org-roam-dailies-capture-today" "k" #'org-roam-dailies-capture-today)
+  (setq org-roam-directory mario/org-roam-dir
+        org-roam-dailies-directory "journals/daily"
+        org-roam-db-gc-threshold most-positive-fixnum
+        org-id-link-to-org-use-id t)
+  :config
+  (setq org-roam-mode-sections
+        (list #'org-roam-backlinks-insert-section
+              #'org-oram-reflinks-insert-section
+              ;;#'org-roam-unlinked-references-insert-section
+              ))
+  ;;(set-popup-rules!
+  ;;  `((,(regexp-quote org-roam-buffer) ; persistent org-roam buffer
+  ;;     :side right :width .33 :height .5 :ttl nil :modeline nil :quit nil :slot 1)
+  ;;    ("^\\*org-roam: " ; node dedicated org-roam buffer
+  ;;     :side right :width .33 :height .5 :ttl nil :modeline nil :quit nil :slot 2)))
+  (org-roam-setup))
+#+end_src
+*** UI
+:PROPERTIES:
+:ID:       3fa15bc3-ba97-46cc-95fc-9f0419b29be7
+:END:
+#+begin_src emacs-lisp
+;; Deps org-roam-ui
+(use-package! websocket
+  :after org-roam)
+(use-package! org-roam-ui
+  :after org-roam
+  :commands (org-roam-ui-mode))
+#+end_src
+** Agenda
+:PROPERTIES:
+:ID:       ea53523d-77a5-47ff-b897-19a05f1ba407
+:END:
+#+begin_src emacs-lisp
+;; Org-Agenda
+(map! :map org-agenda-mode-map
+      :leader
+      "m x" #'mario/org-inbox-capture
+      "m c I" #'mario/clock-in-and-advance)
 (require 'find-lisp)
 (setq org-agenda-files
       (append (find-lisp-find-files mario/org-agenda-dir "\.org$")
               (find-lisp-find-files mario/org-journal-dir "\.org$")))
-
-;; (setq org-agenda-sticky t)
 (use-package! org-agenda
   :init
-  (map! "<f1>" #'mario/switch-to-agenda)
-  (setq org-agenda-block-seperator nil
+  (map! "<F1>" #'mario/switch-to-agenda)
+  (setq org-agenda-block-separator nil
         org-agenda-start-with-log-mode t)
-  (defun mario/switch-to-agenda()
-    (interactive)
-    (org-agenda nil " "))
   :config
+  (setq org-agenda-custom-commands `((" " "Agenda"
+                                     ((agenda ""
+                                              ((org-agenda-span 'week)
+                                              (org-deadline-warning-days 365)))
+                                      (todo "TODO"
+                                           ((org-agenda-overriding-header "Inbox")
+                                            (org-agenda-files '(,(expand-file-name "inbox.org" mario/org-agenda-dir)))))
+                                      (todo "NEXT"
+                                           ((org-agenda-overriding-header "In Progress")
+                                            (org-agenda-files '(,(expand-file-name "projects.org" mario/org-agenda-dir)))))
+                                      (todo "TODO"
+                                           ((org-agenda-overriding-header "Active Projects")
+                                            (org-agenda-skip-function #'mario/skip-projects)
+                                            (org-agenda-files '(,(expand-file-name "projects.org" mario/org-agenda-dir)))))
+                                      (todo "TODO"
+                                           ((org-agenda-overriding-header "One-off Tasks")
+                                            (org-agenda-files '(,(expand-file-name "next.org" mario/org-agenda-dir)))
+                                            (org-agenda-skip-function '(org-agenda-skip-entry-if 'deadline 'scheduled)))))))))
+#+end_src
+** Journal
+:PROPERTIES:
+:ID:       95d25d03-90f2-4a81-b3ba-4f6310b00fbc
+:END:
+#+begin_src emacs-lisp
+;;(after! org-journal
+;;  (setq org-journal-date-prefix "#+TITLE: "
+;;        org-journal-file-format "%Y-%m-%d.org"
+;;        org-journal-time-format "%I:%M%p"
+;;        org-journal-date-format "%A, %d %B %Y"
+;;        org-journal-dir mario/org-journal-dir
+;;        org-journal-enable-agenda-integration t))
+#+end_src
+** Pomodoro
+** Custom function
+*** inbox-capture
+:PROPERTIES:
+:ID:       aeb399ac-ded1-4db7-afaa-e0edc547f8e5
+:END:
+#+begin_src emacs-lisp
+(defun mario/org-inbox-capture ()
+  (interactive)
+  "Capture a task in agenda mode."
+  (org-capture nil "i"))
+#+end_src
+*** Advance TODO
+:PROPERTIES:
+:ID:       5b77bcc0-0b1a-4715-a564-e9939f7ad160
+:END:
+#+begin_src emacs-lisp
+(defun mario/advance-todo ()
+  ;;(org-todo 'right)
+  (org-todo "NEXT")
+  (remove-hook 'org-clock-in-hook #'mario/advance-todo))
+#+end_src
+*** Clock in and advance
+:PROPERTIES:
+:ID:       fcd173bd-f8dc-4e72-806f-025e19fccc5b
+:END:
+#+begin_src emacs-lisp
+(defun mario/clock-in-and-advance ()
+  (interactive)
+  (add-hook 'org-clock-in-hook 'mario/advance-todo)
+  (org-agenda-clock-in))
+#+end_src
+*** Org Hide Properties
+:PROPERTIES:
+:ID:       49325209-045f-4e0d-aa76-5c36d4ca2116
+:END:
+#+begin_src emacs-lisp
+(defun org-hide-properties ()
+  "Hide all org-mode headline property drawers in buffer. Could be slow if it has a lot of overlays."
+  (interactive)
+  (save-excursion
+    (goto-char (point-min))
+    (while (re-search-forward
+            "^ *:properties:\n\\( *:.+?:.*\n\\)+ *:end:\n" nil t)
+      (let ((ov_this (make-overlay (match-beginning 0) (match-end 0))))
+        (overlay-put ov_this 'display "")
+        (overlay-put ov_this 'hidden-prop-drawer t))))
+  (put 'org-toggle-properties-hide-state 'state 'hidden))
+
+#+end_src
+*** Org Show Properties
+:PROPERTIES:
+:ID:       4602b7d2-b670-4184-806a-628c1ba89b81
+:END:
+#+begin_src emacs-lisp
+(defun org-show-properties ()
+  "Show all org-mode property drawers hidden by org-hide-properties."
+  (interactive)
+  (remove-overlays (point-min) (point-max) 'hidden-prop-drawer t)
+  (put 'org-toggle-properties-hide-state 'state 'shown))
+#+end_src
+*** Org Toggle Properties
+:PROPERTIES:
+:ID:       7e121b78-fc14-4a48-baa3-da47240847c0
+:END:
+#+begin_src emacs-lisp
+(defun org-toggle-properties ()
+  "Toggle visibility of property drawers."
+  (interactive)
+  (if (eq (get 'org-toggle-properties-hide-state 'state) 'hidden)
+      (org-show-properties)
+    (org-hide-properties)))
+#+end_src
+*** Copy idlink to clipboard
+:PROPERTIES:
+:ID:       d0e78e4a-b158-4b83-898d-88a2d6a22a15
+:END:
+#+begin_src emacs-lisp
+(defun mario/copy-idlink-to-clipboard()
+       (interactive)
+       (when (eq major-mode 'org-agenda-mode) ;switch to orgmode
+     (org-agenda-show)
+     (org-agenda-goto))
+       (when (eq major-mode 'org-mode) ; do this only in org-mode buffers
+     (setq mytmphead (nth 4 (org-heading-components)))
+         (setq mytmpid (funcall 'org-id-get-create))
+     (setq mytmplink (format "[[id:%s][%s]]" mytmpid mytmphead))
+     (kill-new mytmplink)
+     (message "Copied %s to killring (clipboard)" mytmplink)))
+
+#+end_src
+*** Switch to agenda
+:PROPERTIES:
+:ID:       8fb41583-b784-4181-be73-1f1a074d037b
+:END:
+#+begin_src emacs-lisp
+(defun mario/switch-to-agenda()
+  (interactive)
+  (org-agenda nil " "))
+#+end_src
+*** is project p
+:PROPERTIES:
+:ID:       f5760a07-7b88-42bc-b744-41314d5f09ba
+:END:
+#+begin_src emacs-lisp
   (defun mario/is-project-p()
     "Any Task with todo keyword subtask"
     (save-restriction
@@ -332,7 +412,12 @@ With a prefix ARG always prompt for command to use."
               (when (member (org-get-todo-state) org-todo-keywords-1)
                 (setq has-subtask t))))
           (and is-a-task has-subtask))))
-
+#+end_src
+*** skip project
+:PROPERTIES:
+:ID:       52b44427-807b-47a5-9e6b-1b856030ebb0
+:END:
+#+begin_src emacs-lisp
   (defun mario/skip-projects ()
   "Skip trees that are projects"
   (save-restriction
@@ -345,206 +430,5 @@ With a prefix ARG always prompt for command to use."
         next-headline)
        (t
         nil)))))
-;; idk what it is?
-(setq org-columns-default-format "%40ITEM(Task) %Effort(EE){:} %CLOCKSUM(Time Spent) %SCHEDULED(Scheduled) %DEADLINE(Deadline)")
-(setq org-agenda-custom-commands `((" " "Agenda"
-                                    ((agenda ""
-                                             ((org-agenda-span 'week)
-                                              (org-deadline-warning-days 365)))
-                                     (todo "TODO"
-                                           ((org-agenda-overriding-header "Inbox")
-                                            (org-agenda-files '(,(expand-file-name "inbox.org" mario/org-agenda-dir)))))
-                                     (todo "NEXT"
-                                           ((org-agenda-overriding-header "In Progress")
-                                            (org-agenda-files '(,(expand-file-name "projects.org" mario/org-agenda-dir)))))
-                                     (todo "TODO"
-                                           ((org-agenda-overriding-header "Active Projects")
-                                            (org-agenda-skip-function #'mario/skip-projects)
-                                            (org-agenda-files '(,(expand-file-name "projects.org" mario/org-agenda-dir)))))
-                                     (todo "TODO"
-                                           ((org-agenda-overriding-header "One-off Tasks")
-                                            (org-agenda-files '(,(expand-file-name "next.org" mario/org-agenda-dir)))
-                                            (org-agenda-skip-function '(org-agenda-skip-entry-if 'deadline 'scheduled))))))
-
-                                   ;; ("d" "Daily schedule"
-                                   ;;  ((agenda ""
-                                   ;;           ((org-agenda-span 'day)
-                                   ;;            (org-agenda-skip-function '(org-agenda-skip-entry-if 'scheduled 'deadline))))
-                                     ;; (todo "TODO"
-                                     ;;       ((org-agenda-overriding-header "Inbox")
-                                     ;;        (org-agenda-files '(,(expand-file-name "inbox.org" mario/org-agenda-dir)))
-                                     ;;        (org-agenda-skip-function '(org-agenda-skip-entry-if 'scheduled 'deadline))))))
-                                   ("h" "Habits"
-                                     ((todo "TODO"
-                                           ((org-agenda-overriding-header "HABITS")
-                                            (org-agenda-files '(,(expand-file-name "habits.org" mario/org-agenda-dir)))))))
-                                   ("n" "North"
-                                     ((todo "PROJ"
-                                           ((org-agenda-overriding-header "ACTIVE PROJECT")
-                                            (org-agenda-files '(,(expand-file-name "projects.org" mario/org-agenda-dir)))))
-                                      (todo "NEXT"
-                                           ((org-agenda-overriding-header "PROJECT TODO INPROGRESS")
-                                            (org-agenda-files '(,(expand-file-name "projects.org" mario/org-agenda-dir)))))
-                                      (todo "TODO"
-                                           ((org-agenda-overriding-header "PROJECT TODO")
-                                            (org-agenda-files '(,(expand-file-name "projects.org" mario/org-agenda-dir)))))
-                                      (todo "WTM"
-                                           ((org-agenda-overriding-header "Weekly Term Goal")
-                                            (org-agenda-files '(,(expand-file-name "private/north.org" mario/org-roam-dir)))))
-                                      (todo "STM"
-                                           ((org-agenda-overriding-header "Short Term Goal")
-                                            (org-agenda-files '(,(expand-file-name "private/north.org" mario/org-roam-dir)))))
-                                      (todo "MTM"
-                                           ((org-agenda-overriding-header "Medium Term Goal")
-                                            (org-agenda-files '(,(expand-file-name "private/north.org" mario/org-roam-dir)))))
-                                      (todo "LTM"
-                                           ((org-agenda-overriding-header "Long Term Goal")
-                                            (org-agenda-files '(,(expand-file-name "private/north.org" mario/org-roam-dir))))))))))
 #+end_src
-#+begin_src emacs-lisp
-(map! :map evil-org-agenda-mode-map
-      "c i" #'org-agenda-clock-in
-      "c o" #'org-agenda-clock-out
-      "c I" #'jethro/clock-in-and-advance
-      "i" #'org-agenda-clock-in)
-;; See what this function works?
-(defun jethro/advance-todo ()
-  (org-todo 'right)
-  (remove-hook 'org-clock-in-hook #'jethro/advance-todo))
-
-(defun jethro/clock-in-and-advance ()
-  (interactive)
-  (add-hook 'org-clock-in-hook 'jethro/advance-todo)
-  (org-agenda-clock-in))
-#+end_src
-
-* ORG-Capture
-:PROPERTIES:
-:ID:       0a89ce01-6f0f-4d8d-9179-93ea14d78a0a
-:END:
-#+begin_src emacs-lisp
-(setq org-capture-templates
-        `(("i" "Inbox" entry (file ,(expand-file-name "inbox.org" mario/org-agenda-dir))
-           ,(concat "* TODO %?\n"
-                    "/Entered on/ %u"))))
-
-#+end_src
-* ORG-ROAM
-:PROPERTIES:
-:ID:       ec347dc4-677e-4fbe-838a-687561820873
-:END:
-#+begin_src emacs-lisp
-(use-package! org-roam
-  :init
-  (map! :leader
-        :prefix "n"
-        :desc "Search Notes" "/" #'+default/org-notes-search
-        :desc "org-roam linked ref" "r" #'org-roam
-        :desc "org-roam unlink ref" "R" #'org-roam-unlinked-references
-        :desc "org-roam-find-file" "f" #'org-roam-find-file
-        :desc "Org Column" "|" #'org-columns
-        :desc "Org Column Toggle" "\\" #'org-columns-toggle-or-columns-quit
-        :desc "org-find-file" "F" #'+default/find-in-notes
-        :desc "org-roam-insert" "i" #'org-roam-insert
-        :desc "org-roam-insert-immediate" "I" #'org-roam-insert-immediate
-        :desc "org-roam-server-mode" "s" #'org-roam-server-mode
-        :desc "org-roam-switch-to-buffer" "b" #'org-roam-switch-to-buffer
-        :desc "org-roam-graph" "g" #'org-roam-graph
-        :desc "org-roam-capture" "c" #'org-roam-capture
-        :desc "org-roam-dailies-find-yesterday" "h" #'org-roam-dailies-find-yesterday
-        :desc "org-roam-dailies-find-today" "j" #'org-roam-dailies-find-today
-        :desc "org-roam-dailies-find-date" "k" #'org-roam-dailies-find-date
-        :desc "org-roam-dailies-find-tomorrow" "l" #'org-roam-dailies-find-tomorrow
-        (:prefix (";" . "journal")
-         :desc "New Entry" "j" #'org-journal-new-entry
-         :desc "Previous Entry" "h" #'org-journal-previous-entry
-         :desc "Next Entry" "l" #'org-journal-next-entry))
-  (setq org-roam-directory mario/org-roam-dir
-        org-roam-graph-viewer "/usr/bin/brave"
-        org-roam-db-gc-threshold most-positive-fixnum
-        org-roam-graph-exclude-matcher "private"
-        org-roam-tag '(prop last-directory)
-        org-roam-v2-ack t
-        org-id-link-to-org-use-id t)
-  :config
-  (setq org-roam-capture-templates
-        '(("d" "default" plain (function org-roam-capture--get-point)
-           "%?"
-           :file-name "${slug}"
-           :head "#+TITLE: ${title}
-,#+title: ${title}
-,#+DATE: %<<%Y-%m-%d %a>>\n"
-           :immediate-finish t
-           :unnarrowed t)
-          ("p" "private" plain (function org-roam-capture--get-point)
-           "%?"
-           :file-name "private/${slug}"
-           :head "#+TITLE: ${title}
-,#+title: ${title}\n"
-           :immediate-finish t
-           :unnarrowed t)))
-  (setq org-roam-capture-ref-templates
-        '(("r" "ref" plain (function org-roam-capture--get-point)
-           "%?"
-           :file-name "resonance/${slug}"
-           :head "#+TITLE:${title}
-,#+title: ${title}
-,#+DATE: %<%Y-%m-%d>
-,#+roam_key: ${ref}
-,#+roam_tags: bpmcinbox
-
-- source :: ${ref}
-- tags :: "
-           :unnarrowed t)))
-  (setq org-roam-dailies-directory "private/daily/")
-  (setq org-roam-dailies-capture-templates
-        '(("d" "daily" plain (function org-roam-capture--get-point)
-           ""
-           :file-name "private/daily/%<%Y-%m-%d>"
-           :head "#+TITLE: %<%A, %d %B %Y>
-- \n* Time Tracking\n"
-           :immediate-finish t)))
- ;; this use with mario/org-ram-mk-link
-    ;; (setq org-roam-dailies-capture-templates
-    ;;       (let ((head
-    ;;              (concat "#+title: %<%Y-%m-%d (%A)>\n#+startup: showall\n* Daily Overview\n"
-    ;;                      "#+begin_src emacs-lisp :results value raw\n"
-    ;;                      "(mario/get-daily-agenda \"%<%Y-%m-%d>\")\n"
-    ;;                      "#+end_src\n"
-;;                         "* [/] Do Today\n* [/] Maybe Do Today\n* Journal\n")))
-;;            `(("j" "journal" entry
-;;               #'org-roam-capture--get-point
-;;               "* %<%H:%M> %?"
-;;               :file-name "private/daily/%<%Y-%m-%d>"
-;;               :head ,head
-;;               :olp ("Journal"))
-;;              ("t" "do today" item
-;;               #'org-roam-capture--get-point
-;;               "[ ] %a"
-;;               :file-name "private/daily/%<%Y-%m-%d>"
-;;               :head ,head
-;;               :olp ("Do Today")
-;;               :immediate-finish t)
-;;              ("m" "maybe do today" item
-;;               #'org-roam-capture--get-point
-;;               "[ ] %a"
-;;               :file-name "private/daily/%<%Y-%m-%d>"
-;;               :head ,head
-;;               :olp ("Maybe Do Today")
-;;               :immediate-finish t))))
-  (set-company-backend! 'org-mode '(company-capf)))
-
-(use-package! org-roam-protocol
-  :after org-protocol)
-#+end_src
-* DEFT
-:PROPERTIES:
-:ID:       a225257d-dc6e-4738-b48e-472333c4a1ba
-:END:
-#+begin_src emacs-lisp
-(setq deft-directory mario/org-roam-dir
-      deft-use-filename-as-title t
-      deft-use-filter-string-for-filename t
-      deft-default-extension "org"
-      deft-recursive t)
-#+end_src
+* Deft
